--- a/ASP.NET MVC/Vidly/Vidly/Views/Movies/Random.cshtml
+++ b/ASP.NET MVC/Vidly/Vidly/Views/Movies/Random.cshtml
@@ -1,4 +1,4 @@
-﻿@model global::VidlyApp.ViewModel.RandomMovieViewModel
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -27,3 +27,4 @@ else
         }
     </ul>
 }
+
