--- a/ASP.NET MVC/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/ASP.NET MVC/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -1,22 +1,30 @@
-﻿
+﻿@model IEnumerable<Vidly.Models.Movie>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Movies";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Movies</h2>
-<table class="table table-bordered table-hover">
-    <thead>
+@if (!Model.Any())
+{
+    <p>There are no movies yet</p>
+}
+else
+{
+    <table class="table table-bordered table-hover">
+        <thead>
         <tr>
             <th>Movie</th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Name</td>
+                <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
             </tr>
         }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+}
+
