--- a/ASP.NET MVC/Vidly/Vidly/Views/Movies/MovieForm.cshtml
+++ b/ASP.NET MVC/Vidly/Vidly/Views/Movies/MovieForm.cshtml
@@ -25,6 +25,7 @@
         @Html.LabelFor(m => m.Movie.GenreId)
         @Html.DropDownListFor(m => m.Movie.GenreId,
             new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Movie.GenreId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.NumberInStock)
