--- a/ASP.NET MVC/Vidly/Vidly/Views/Movies/MovieForm.cshtml
+++ b/ASP.NET MVC/Vidly/Vidly/Views/Movies/MovieForm.cshtml
@@ -16,10 +16,12 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.DateAdded)
         @Html.TextBoxFor(m => m.Movie.DateAdded, "{0:d MMMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Movie.DateAdded)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
         @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:d MMMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Movie.ReleaseDate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.GenreId)
