--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Rabbits_and_carrots.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Rabbits_and_carrots.razor
@@ -1,6 +1,7 @@
-﻿@page "/counter"
+﻿@page "/rabbits_and_carrots"
+@using System
 
-<h1>Home</h1>
+<h1>Rabbits and Carrots</h1>
 
 <p>Current count: @currentCount</p>
 <hr>
