--- a/Advanced Programming University Course/OO C#/blazorserver02/Shared/NavMenu.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Shared/NavMenu.razor
@@ -13,8 +13,14 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="game-of-life">
+                <span class="oi oi-plus" aria-hidden="true"></span> Game of Life
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="rabbits_and_carrots">
+                <span class="oi oi-monitor" aria-hidden="true"></span> Rabbits and Carrots
             </NavLink>
         </li>
         <li class="nav-item px-3">
