Colors for rabbit and carrot are changed due to Problem 4

--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Rabbits_and_carrots.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Rabbits_and_carrots.razor
@@ -33,7 +33,7 @@
         <tr>
             @for(var j=0; j< @e.total_of_cols(); j++){
                 if(e.biounit(i,j)!=null){
-                    <td class="cell alive"></td>
+                    <td class="cell" style="background-color:@e.biounit(i,j).mycolor()"></td>
                 }
                 else
                 {
