--- a/ASP.NET MVC/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/ASP.NET MVC/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -31,7 +31,7 @@ else
                 <td>
                     @if (movie.ReleaseDate != null)
                     {
-                        @movie.ReleaseDate.Value
+                        @movie.ReleaseDate.Year
                     }
                 </td>
                 <td>@movie.Genre.Name</td>
