--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -1,4 +1,55 @@
-﻿@page "/counter"
+﻿@page "/game-of-life"
 
-<h1>Home</h1>
+<h1>Game Of Live</h1>
+<p>Current count: @currentCount</p>
 
+<hr />
+
+
+<button class="btn btn-primary" @onclick="IncrementCount">Next</button>
+<a class="btn btn-primary" target="_blank" href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_life">Look for
+    Patterns in Wikipedia</a>
+
+@{
+    if (currentCount == 0)
+    {
+
+    }
+}
+
+<hr />
+<table class="environment">
+    @for (int i = 0; i < @e.total_of_rows(); i++)
+    {
+        <tr>
+            @for (int j = 0; j < @e.total_of_cols(); j++)
+            {
+                @if (e.is_alive(i, j))
+                {
+                    <td class="cell alive"></td>
+                }
+                else
+                {
+                    <td class="cell dead"></td>
+                }
+            }
+        </tr>
+    }
+</table>
+
+<hr />
+
+@code {
+    private int currentCount = 0;
+
+
+
+    private Data.GameOfLife.Environment e = new Data.GameOfLife.Environment(30, 30);
+
+    private void IncrementCount()
+    {
+        currentCount++;
+        e.nextConwayStep();
+    }
+
+}
