Anchors => HTML tag is made for generating links in web page

--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -5,10 +5,10 @@
 
 <hr />
 
-
 <button class="btn btn-primary" @onclick="IncrementCount">Next</button>
 <a class="btn btn-primary" target="_blank" href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_life">Look for
-    Patterns in Wikipedia</a>
+    Patterns in Wikipedia
+    </a>
 
 @{
     if (currentCount == 0)
@@ -36,8 +36,9 @@
         </tr>
     }
 </table>
-
 <hr />
+
+
 
 @code {
     private int currentCount = 0;
