Using an existing pattern problem is solved

--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -34,7 +34,8 @@
 @{
     if (currentCount == 0)
     {
-
+        e.put_pattern(6,6, "pentadecathlon");
+        e.put_pattern(15,15, "pentadecathlon");
     }
 }
 
