--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -30,6 +30,13 @@
 <button class="btn btn-primary" @onclick="AddPattern">@AddPatternText</button>
 <div style="display:@(isPatternShowed ? "block" : "none")">
     <p>Add the pattern pentadecathlon</p>
+    <h5></h5>
+    row
+    <input @bind="row" />
+    col
+    <input @bind="col" /> Pattern pentadecathlon
+    <button class="btn btn-primary" @onclick="Add" >@AddButton</button>
+
 </div>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Next</button>
@@ -73,13 +80,14 @@
 @code {
     private int cyclesPerTime = 0;
     private int currentCount = 0;
-
-
+    private int row = 0;
+    private int col = 0;
 
     private Data.GameOfLife.Environment e = new Data.GameOfLife.Environment(30, 30);
     private string theRadio = "";
-    private bool isPatternShowed=false;
-    private string AddPatternText="Add Pattern...";
+    private bool isPatternShowed = false;
+    private string AddPatternText = "Add Pattern...";
+    private string AddButton = "Add";
 
     private string option = "";
     private void IncrementCount()
@@ -89,17 +97,31 @@
     }
     private void AddPattern()
     {
-        if (isPatternShowed) {
+        if (isPatternShowed)
+        {
             isPatternShowed = false;
-        } else {
+        }
+        else
+        {
             isPatternShowed = true;
         }
 
+        if (isPatternShowed)
+        {
+            AddPatternText = "Add Pattern(-)";
+        }
+        else
+        {
+            AddPatternText = "Add Pattern...";
+        }
+    }
+
+    private void Add() {
         if(isPatternShowed){
-            AddPatternText="Add Pattern(-)";
+            AddButton="Add";
         }
         else{
-            AddPatternText="Add Pattern...";
+            AddButton="Add";
         }
     }
 
