New function of adding patterns in the grid - part 2 is done

--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -117,12 +117,8 @@
     }
 
     private void Add() {
-        if(isPatternShowed){
-            AddButton="Add";
-        }
-        else{
-            AddButton="Add";
-        }
+        e.put_pattern(row, col, "pentadecathlon");
+        row = col = 0;
     }
 
     private void ClickRadio(ChangeEventArgs args)
