--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Index.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello SVG World</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<svg width="350" height="100">
+    <circle cx="22" cy="80" r="1" stroke="#409040" stroke-width="1" fill="#90DD90" />
+    <circle cx="300" cy="50" r="12" stroke="#409040" stroke-width="1" fill="#90DD90" />
+    <text x="5" y="90" fill="#208020" transform="rotate(-5)">Welcome to WSB's Bio-inspired Simulator</text>
+</svg>
