Producing an SVG grid process is underway, some error needs to be fixed

--- a/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver02/Pages/Counter.razor
@@ -6,6 +6,36 @@
 
 <hr>
 
+@{
+    if (currentCount == 0)
+    {
+        e.put_pattern(6, 6, "Pentadecathlon");
+    }
+
+    int svgh = e.total_of_rows() * 9 + 2;
+    int svgw = e.total_of_cols() * 9 + 2;
+}
+
+<svg width="@svgw" height=>"@svgh">
+    @for (var i = 0; i < @e.total_of_rows(); i++)
+    {
+        @for (var j = 0; j < @e.total_of_cols(); j++)
+        {
+            int cy = (i * 9 + 4 + 1);
+            int cx = (i * 9 + 4 + 1);
+            @if (e.biounit(i, j) != null)
+            {
+                <circle cx="@cx" cy="@cy" r="4" fill="#90FA90" />
+            }
+            else
+            {
+                <circle cx="@cx" cy="@cy" r="4" fill="#909090" />
+            }
+        }
+    }
+
+</svg>
+
 <p>
     <input type="radio" name="myradiobtn" checked="@(theRadio.Equals("step"))" value="step" @onchange="ClickRadio" />
     Step by step
@@ -68,24 +98,24 @@
 
 
 <hr />
-<table class="environment">
-    @for (int i = 0; i < @e.total_of_rows(); i++)
+@*<table class="environment">
+    @for (var i = 0; i < @e.total_of_rows(); i++)
     {
-        <tr>
-            @for (int j = 0; j < @e.total_of_cols(); j++)
-            {
-                @if (e.is_alive(i, j))
-                {
-                    <td class="cell alive" />
-                }
-                else
-                {
-                    <td class="cell dead" />
-                }
-            }
-        </tr>
+    <tr>
+    @for (var j = 0; j < @e.total_of_cols(); j++)
+    {
+    @if (e.biounit(i, j) != null)
+    {
+    <td class="cell alive" />
     }
-</table>
+    else
+    {
+    <td class="cell dead" />
+    }
+    }
+    </tr>
+    }
+    </table> *@
 
 <hr />
 
