--- a/Advanced Programming University Course/OO C#/blazorserver01/Pages/Index.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver01/Pages/Index.razor
@@ -8,14 +8,14 @@
 
 <svg width="1500" height="500">
 
-    <rect x="100" y="200" width="30" height="300" fill="black" />
-    <rect x="30" y="470" width="180" height="30" fill="black" />
+    <rect x="100" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
+    <rect x="30" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
 
-    <rect x="400" y="200" width="30" height="300" fill="black" />
-    <rect x="330" y="470" width="180" height="30" fill="black" />
+    <rect x="400" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
+    <rect x="330" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
 
-    <rect x="700" y="200" width="30" height="300" fill="black" />
-    <rect x="630" y="470" width="180" height="30" fill="black" />
+    <rect x="700" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
+    <rect x="630" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
 
 </svg>
 
@@ -25,6 +25,19 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 @code {
     private int currentCount = 0;
+    private string color = "black";
+
+    private void TowerClick()
+    {
+        if (color == "black")
+        {
+            color = "blue";
+        }
+        else
+        {
+            color = "black";
+        }
+    }
 
     private void IncrementCount()
     {
