Color changing task is modified

--- a/Advanced Programming University Course/OO C#/blazorserver01/Pages/Index.razor
+++ b/Advanced Programming University Course/OO C#/blazorserver01/Pages/Index.razor
@@ -5,42 +5,50 @@
 <p>Current count: @currentCount</p>
 
 
-
 <svg width="1500" height="500">
+    
+    <g id="r1" fill="@r1.color" @onclick="() => TowerClick(r1)">
+        <rect x="100" y="200" width="30" height="300" />
+        <rect x="30" y="470" width="180" height="30"/>
+    </g>
 
-    <rect x="100" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
-    <rect x="30" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
+    <g id="r2" fill="@r2.color" @onclick="() => TowerClick(r2)">
+        <rect x="400" y="200" width="30" height="300" />
+        <rect x="330" y="470" width="180" height="30"/>
+    </g>
 
-    <rect x="400" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
-    <rect x="330" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
-
-    <rect x="700" y="200" width="30" height="300" fill="@color" @onclick="() => TowerClick()" />
-    <rect x="630" y="470" width="180" height="30" fill="@color" @onclick="() => TowerClick()" />
+    <g id="r3" fill="@r3.color" @onclick="() => TowerClick(r3)">
+        <rect x="700" y="200" width="30" height="300" />
+        <rect x="630" y="470" width="180" height="30"/>
+    </g>
 
 </svg>
 
-<br>
-<br>
-<br>
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 @code {
     private int currentCount = 0;
-    private string color = "black";
+    List<Data.Rectangle> items = new List<Data.Rectangle>();
+    public Data.Rectangle r1 = new Data.Rectangle(1,"black");
+    public Data.Rectangle r2 = new Data.Rectangle(2,"black");
+    public Data.Rectangle r3 = new Data.Rectangle(3,"black");
 
-    private void TowerClick()
+    public void listCreate(){
+        items.Add(r1);
+        items.Add(r2);
+        items.Add(r3);
+    }
+    private void TowerClick(Data.Rectangle obj)
     {
-        if (color == "black")
+        if(obj.color=="black")
         {
-            color = "blue";
-        }
-        else
+            obj.color = "blue";
+        }else
         {
-            color = "black";
+            obj.color = "black";
         }
     }
-
-    private void IncrementCount()
+    public Index()
     {
-        currentCount++;
+        listCreate();
     }
+    
 }
